Fixed z-index for toast message and footer

--- a/openloops.styl
+++ b/openloops.styl
@@ -57,7 +57,7 @@ body
 		width right-sidebar-width
 		color black
 		background-color white;
-		z-index:999
+		z-index:10
 		border-left: 1px solid lightgray;
 
 		.header-text {
@@ -389,7 +389,7 @@ header.issue.enhancement
 
 
 footer
-	z-index:99999
+	z-index:11
 	background-color: whitesmoke;
 	border-top: 1px solid lightgray;
 	position fixed
@@ -475,6 +475,7 @@ footer
 	border-radius: 10px;
 	font-size: 1rem;
 	text-decoration: none;
+	z-index:99999;
 }
 
 #header-title-msg-count
